--- a/passop/src/index.css
+++ b/passop/src/index.css
@@ -1,7 +1,11 @@
 @import "tailwindcss";
 
+html, body, #root {
+  height: 100%;
+}
 @layer components{
   .mycontainer{
     @apply container px-40 py-16 mx-auto;
   }
 }
+
